<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_signin"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    tools:context=".ui.ForgetPasswordActivity">

    <LinearLayout
        style="@style/HeightWidthMatch"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            style="@style/imageRegisterApp"
            app:srcCompat="@drawable/icon_back"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imageView5"
            style="@style/imageRegisterApp"
            app:srcCompat="@drawable/logo2" />

        <TextView
            style="@style/NormalTextStyle"
            android:text="@string/forgot_password"
            android:textColor="@color/whiteColor" />

        <TextView
            style="@style/bodyTextNormal"
            android:text="@string/forget_password_text" />

        <LinearLayout style="@style/linearRegister">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditText"
                android:layout_marginTop="@dimen/_16sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/ChangePasswordEdit"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_send"
                style="@style/MainButton"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/get_start"
                android:text="@string/send" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>