<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textDirection="ltr"
    android:layoutDirection="ltr">

    <LinearLayout
        android:id="@+id/ll_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_name"
            android:textColor="@color/blackColor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_order_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_body"
            android:textColor="@color/hintColor"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_order_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_order"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toEndOf="@+id/ll_order"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/btn_status"
            android:layout_width="77dp"
            android:layout_height="25dp"
            android:background="@drawable/outline_button_red"
            android:text="@string/cancel"
            android:textColor="@color/cancelColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/order_time"
            android:textColor="@color/hintColor"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/viewColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_order" />

</androidx.constraintlayout.widget.ConstraintLayout>