<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    tools:context=".feature.cartDialogFragment.view.CartDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/outline_dialog"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_the_request_type"
            android:textColor="@color/blackColor"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_1sdp"
            android:background="@drawable/get_start"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background_white"
                android:text="@string/pickup"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/get_start"
                android:text="@string/delivery"
                android:textColor="@color/whiteColor"
                android:textSize="14sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:indeterminateTint="@color/colorAccent"
            tools:targetApi="lollipop" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cat_dialog"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp" />

        <Button
            android:id="@+id/btn_add_address"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:text="@string/add_another_address"
            android:textColor="@color/hintColor"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mobile_number"
                android:textColor="@color/blackColor"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="16dp"
                android:text="@string/tv_mobile_number"
                android:textColor="@color/hintColor"
                android:textSize="13sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/get_start"
            android:text="@string/submit_order"
            android:textColor="@color/whiteColor"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>